<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    android:textDirection="ltr"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_with_border"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_offer_tittle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_32sdp"
            android:gravity="center"
            android:fontFamily="@font/tajawal_medium"
            android:text="@string/offer_hash"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/_14ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_cancel_offer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:gravity="center"
            android:fontFamily="@font/tajawal_medium"
            android:text="@string/cancel_offer"
            android:textColor="@color/red"
            android:textSize="@dimen/_14ssp" />



    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/background_button"
        android:gravity="center"
        android:fontFamily="@font/tajawal_bold"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />


</LinearLayout>