<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/_16sdp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.payment.PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">


               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_centerInParent="true"
                   android:adjustViewBounds="true"
                   android:fontFamily="@font/tajawal_medium"
                   android:scaleType="fitCenter"
                   android:text="@string/payment"
                   android:textColor="@color/white"
                   android:textSize="@dimen/_18ssp" />

               <ImageView
                   android:id="@+id/img_back"
                   android:layout_width="@dimen/_24sdp"
                   android:layout_height="@dimen/_24sdp"
                   android:layout_alignParentStart="true"
                   android:layout_centerInParent="true"
                   android:padding="@dimen/_2sdp"
                   android:src="@drawable/quantum_ic_arrow_back_grey600_24"
                   android:tint="@color/colorPrimaryDark" />

           </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/tajawal_medium"
            android:text="@string/order_details"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/background_gray_with_border"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/img_store"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/aaber_logo"
                app:riv_corner_radius="@dimen/_10sdp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_order_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tajawal_medium"
                    android:gravity="start|center"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/tv_order_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:gravity="start|center"
                    android:text="@string/address"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textColor="@color/txt_color"
                    android:textSize="@dimen/_12ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_order_cost"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="start|center"
                        android:text="@string/total"
                        android:textColor="@color/txt_color"
                        android:textSize="@dimen/_12ssp" />


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/tajawal_medium"
            android:text="@string/payment_options"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/background_gray_with_border"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_cash_on_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_gravity="start"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:checked="false"
                    android:text="@string/cash_on_delivery"
                    android:textColor="@color/txt_color"
                    android:textSize="@dimen/_16ssp" />



                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_credit_card"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_gravity="start"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:checked="false"
                    android:text="@string/credit_card"
                    android:textColor="@color/txt_color"
                    android:textSize="@dimen/_16ssp" />
            </RadioGroup>

        </LinearLayout>


    </LinearLayout>

    <include
        android:id="@+id/bt_payment"
        layout="@layout/progress_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_32sdp" />


</RelativeLayout>